--- a/Webmaster442.WinTerminalInteract/Webmaster442.WinTerminalInteract.csproj
+++ b/Webmaster442.WinTerminalInteract/Webmaster442.WinTerminalInteract.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AnalysisLevel>latest</AnalysisLevel>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
 </Project>
