--- a/Webmaster442.WindowsTerminalFragment/Webmaster442.WindowsTerminalFragment.csproj
+++ b/Webmaster442.WindowsTerminalFragment/Webmaster442.WindowsTerminalFragment.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <AnalysisLevel>latest</AnalysisLevel>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
