--- a/Webmaster442.WindowsTerminalFragment/Webmaster442.WindowsTerminalFragment.csproj
+++ b/Webmaster442.WindowsTerminalFragment/Webmaster442.WindowsTerminalFragment.csproj
@@ -9,4 +9,8 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="TerminalFragment.Tests"/>
+  </ItemGroup>
+
 </Project>
