Work on terminal designer

--- a/TerminalFragmentDesigner/TerminalFragmentDesigner.csproj
+++ b/TerminalFragmentDesigner/TerminalFragmentDesigner.csproj
@@ -31,6 +31,9 @@
     <Content Update="wwwroot\index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\terminal_placeholder.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
